--- a/wercker.yml
+++ b/wercker.yml
@@ -5,3 +5,9 @@ build:
         version: 0.14
         theme: greyshade
         flags: --buildDrafts=true
+deploy:
+  steps:
+    - lukevivier/gh-pages@0.2.1:
+        token: $GIT_TOKEN
+        domain: nonnen.io
+        basedir: public
