--- a/wercker.yml
+++ b/wercker.yml
@@ -7,7 +7,8 @@ build:
         flags: --buildDrafts=true
 deploy:
   steps:
-    - lukevivier/gh-pages@0.2.1:
+  - gh-pages:
         token: $GIT_TOKEN
         domain: nonnen.io
-        basedir: public
+        basedir: .
+        repo: helvalius/helvalius.github.io
