--- a/wercker.yml
+++ b/wercker.yml
@@ -7,7 +7,7 @@ build:
         flags: --buildDrafts=true
 deploy:
   steps:
-  - gh-pages:
+  - lukevivier/gh-pages@0.2.1
         token: $GIT_TOKEN
         domain: nonnen.io
         basedir: .
