--- a/wercker.yml
+++ b/wercker.yml
@@ -10,5 +10,5 @@ deploy:
     - lukevivier/gh-pages@0.2.1:
         token: $GIT_TOKEN
         domain: nonnen.io
-        basedir: .
+        basedir: public
         repo: helvalius/helvalius.github.io
