--- a/wercker.yml
+++ b/wercker.yml
@@ -1,12 +1,15 @@
-box: wercker/default
+box: debian
 build:
   steps:
     - arjen/hugo-build:
-        version: 0.14
-        theme: greyshade
-        flags: --buildDrafts=false
+        version: "0.40.3"
+        theme: redlounge
+        config: second-config.toml
+        flags: --disableKinds=["sitemap"]
 deploy:
   steps:
+    - install-packages:
+        packages: git ssh-client
     - lukevivier/gh-pages@0.2.1:
         token: $GIT_TOKEN
         domain: nonnen.io
